<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16dp"
android:gravity="top">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/clevertap_logo" />

    <!-- Login -->
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Email ID -->
    <TextView
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/full_name_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/enter_full_name"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <!-- Password -->
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:textSize="16sp" />

    <!-- Already have account? -->
    <TextView
        android:id="@+id/registration_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/link_blue"
        android:textColorLink="@color/link_blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>

